[package]
name = "audio-visualizer"
version = "0.1.0"
description = "A basic visualizer for audio in the terminal"
authors = ["Harrison Oest <harrison.oest@nagrastar.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
cpal = "0.15"
rustfft = "6.1"
ringbuf = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
